src/objects/MMD_Con_Mgr_Search__c.object
<CustomObject>
    <description>(MBI) - MMD - Consultant Manager and other Provider Search details</description>
    <fields>
        <fullName>ASSETPLACE__c</fullName>
        <label>Assets Placed ($000)</label>
        <precision>14</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>Firm MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_Firm_Profile__c</fullName>
        <label>MMD Firm Profile</label>
        <referenceTo>MMCOMP__c</referenceTo>
        <relationshipLabel>Manager Searches</relationshipLabel>
        <relationshipName>MMD_Con_Manager_Searches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NOMGRS__c</fullName>
        <label>Managers/Providers in Database</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTHERTYPE__c</fullName>
        <label>Other Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEARCHES__c</fullName>
        <label>Searches Last Year</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SRCHTYPE__c</fullName>
        <label>Search Type Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Type__c</fullName>
        <formula>CASE(  SRCHTYPE__c  ,
&quot;DOMEQUITY&quot;,&quot;Domestic Equity Managers&quot;,
&quot;LCAPGROWTH&quot;,&quot;Large Cap Growth Managers&quot;,
&quot;LCAPVALUE&quot;,&quot;Large Cap Value Managers&quot;,
&quot;MCAPGROW&quot;,&quot;Mid Cap Growth Managers&quot;,
&quot;MCAPVALUE&quot;,&quot;Mid Cap Value Managers&quot;,
&quot;SCAPGROW&quot;,&quot;Small Cap Growth Managers&quot;,
&quot;SCAPVALUE&quot;,&quot;Small Cap Value Managers&quot;,
&quot;DOMFIXED&quot;,&quot;Domestic Fixed Income Managers&quot;,
&quot;DOMBALANCE&quot;,&quot;Domestic Balanced Managers&quot;,
&quot;PRIVMGR&quot;,&quot;Private Equity Manager&quot;,
&quot;REALESTATE&quot;,&quot;Real Estate Managers&quot;,
&quot;DERIVATIVE&quot;,&quot;Derivative / Alternative Managers&quot;,
&quot;GICSPON&quot;,&quot;GIC Sponsors&quot;,
&quot;BANKINV&quot;,&quot;BIC Sponsors&quot;,
&quot;INTLEQUITY&quot;,&quot;International Equity Managers&quot;,
&quot;INTLFIXED&quot;,&quot;Int&apos;l Fixed Income Managers&quot;,
&quot;EMGMKTMGR&quot;,&quot;Emerging Market Managers&quot;,
&quot;MINWOMMGR&quot;,&quot;Minority/Women owned Managers&quot;,
&quot;SOCIALCON&quot;,&quot;Socially Conscious Managers&quot;,
&quot;TACTALLOC&quot;,&quot;Tactical Asset Alloc. Managers&quot;,
&quot;ACTUARY&quot;,&quot;Actuaries&quot;,
&quot;HEDGE&quot;,&quot;Hedge Fund Managers&quot;,
&quot;BUNDLED&quot;,&quot;Bundled/Unbundled /Strategic Alliances&quot;,
&quot;DCOPTIONS&quot;,&quot;Defined Contribution Options&quot;,
&quot;DOMCUST&quot;,&quot;Domestic Custodians / Master Trustees&quot;,
&quot;INTLBANKS&quot;,&quot;Int&apos;l Banks / Global Custodians&quot;,
&quot;MUTUALF&quot;,&quot;Mutual Fund Managers&quot;,
&quot;3RDADMIN&quot;,&quot;3rd Party Administrators&quot;,
&quot;RECKEEP&quot;,&quot;Recordkeepers&quot;,
&quot;OTHER&quot;,&quot;Other Managers&quot;, SRCHTYPE__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Search Type</label>
        <type>Text</type>
    </fields>
    <label>MMD Con Manager Search</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Con Manager Searches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>